# gbPhysics

./: .gitignore  CMakeLists.txt  README.md  config.h.in  gbAlgorithm.h  gbMath.h  gbPhysicsConfig.h.in
phytest/: CMakeLists.txt  test.cpp
src/: algorithm.cpp  algorithm.h  boundingbox.cpp  boundingbox.h  camera.h  gbAlgorithm.cpp  gbMath.h  image.cpp  image.h  math.h  matrix.h  octree.h  partical.h  physicsNS.h  plane.h  ray.h  sptree.cpp  sptree.h  type.cpp  type.h
test/: CMakeLists.txt  bit_vector_test.cpp  kd_node_test.cpp  matrix_test.cpp  sptree_test.cpp  test.cpp  test.sh  type_test.cpp
